--- a/MvcClient/MvcClient.csproj
+++ b/MvcClient/MvcClient.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.18" />
   </ItemGroup>
 
